eks-handson/apps/demo-web/overlays/dev/patch-add-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web
spec:
  template:
    spec:
      containers:
        - name: demo-web
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: demo-pvc
