eks-handson/apps/demo-web/overlays/dev/patch-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web
  namespace: demo
spec:
  ingressClassName: alb
